[package]
name = "bdaddr"
version = "0.1.0"
authors = ["yskszk63 <yskszk63@gmail.com>"]
edition = "2018"
description = "Bluetooth Device Address."
repository = "https://github.com/yskszk63/bdaddr"
license = "MIT OR Apache-2.0"
keywords = ["bluetooth"]
category = ["data-structures"]

[dependencies]
thiserror = "1.0"
generic-array = { version = "0.14", optional = true }
aes = { version = "0.6", optional = true }

[features]
default = []
matches = ["generic-array", "aes"]
