[package]
name = "bdaddr"
version = "0.1.1"
authors = ["yskszk63 <yskszk63@gmail.com>"]
edition = "2018"
description = "Bluetooth Device Address."
repository = "https://github.com/yskszk63/bdaddr"
license = "MIT OR Apache-2.0"
keywords = ["bluetooth"]
categories = ["data-structures"]

[dependencies]
thiserror = "1.0"
aes = { version = "0.7", optional = true }

[features]
default = []
matches = ["aes"]

[package.metadata.docs.rs]
all-features = true
