[package]
name = "bdaddr"
version = "0.2.0-alpha.4"
authors = ["yskszk63 <yskszk63@gmail.com>"]
edition = "2021"
description = "Bluetooth Device Address."
repository = "https://github.com/yskszk63/bdaddr"
license = "MIT OR Apache-2.0"
keywords = ["bluetooth"]
categories = ["data-structures"]
resolver = "2"
rust-version = "1.56"

[dependencies]
thiserror = "1.0"
aes = { version = "0.7", optional = true }

[features]
default = []
matches = ["aes"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
